Added images folder,created Header component

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.navbar-style{
+    background-color: rgb(223, 199, 168);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.logo-img-style{
+    height: 50px;
+    width: 50px;
+}
+.logo-text-style{
+    margin: -21px 0px 0px 50px;
+}
+*{
+    font-family: 'Times New Roman', Times, serif;
 }
