Created footer component

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@
 *{
     font-family: 'Times New Roman', Times, serif;
 }
+main{
+    min-height: 82vh;
+}
+footer{
+    background-color: rgb(223, 199, 168); 
+    padding: 10px;
+}
